[project]
name = "cvrpnotebook"
version = "0.1.0"
description = "Interactive demonstration of a capacitated vehicle routing problem (CVRP) comparing exact MILP solutions with the Clarke & Wright heuristic"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.19.11",
    "uniformcvrpdemo>=0.1.2",
]
